<resources>
    <string name="app_name">MapTestInterview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_by">Sort By</string>
    <string name="city_name">City Name</string>
    <string name="address">Address</string>
    <string name="distance">Distance</string>
    <string name="add_poi">Add POI</string>
    <string name="no_place_string">No Place Available.\nLets start by adding few places</string>
    <string name="do_you_want_to_save_this_selected_location">Do you want to save this selected location ?</string>
    <string name="place_name">Place Name</string>
    <string name="search_place">Search Place</string>
    <string name="save">Save</string>
    <string name="maps_api_key">AIzaSyBSNyp6GQnnKlrMr7hD2HGiyF365tFlK5U</string>
</resources>