<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:layout_margin="8dp"
    android:background="@drawable/rounded_bg_10"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/city_name"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/cityName"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_delete_24"
        app:layout_constraintEnd_toStartOf="@+id/edit"
        app:layout_constraintStart_toEndOf="@+id/cityName"
        android:background="?android:selectableItemBackgroundBorderless"
        android:id="@+id/delete"
        android:contentDescription="@null"
        app:layout_constraintTop_toTopOf="@+id/cityName"
        app:layout_constraintBottom_toBottomOf="@+id/cityName"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete"
        android:layout_marginStart="12dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:id="@+id/edit"
        android:contentDescription="@null"
        app:layout_constraintTop_toTopOf="@+id/cityName"
        app:layout_constraintBottom_toBottomOf="@+id/cityName"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:text="@string/address"
        app:layout_constraintTop_toBottomOf="@+id/cityName"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        />

    <TextView

        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/distance"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>